Export lars to JS API, properly configure model project

--- a/parser/js/src/main/resources/index.html
+++ b/parser/js/src/main/resources/index.html
@@ -28,9 +28,8 @@
           var parser = hmda.parser.fi.FIDataDatParser();
           var fiData = parser.readAll(text);
           var ts = fiData.ts;
-          console.log(ts);
           var lars = fiData.lars;
-          console.log(lars[0]);
+          console.log(lars);
 
         };
 
