Create platform-test project, move parser UI test

--- a/platform-test/js/src/main/resources/index.html
+++ b/platform-test/js/src/main/resources/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>Example HMDA Parser Application</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <script type="text/javascript" src="../parserjs-fastopt.js"></script>
+    <script type="text/javascript" src="../platformtestjs-fastopt.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 <body style="margin: 0px">
 
-  <h1>HMDA Parser Example (client side)</h1>
+  <h1>HMDA Parser Example (Javascript)</h1>
   <input type="file" id="files" name="files[]">
 
 <script>
