--- a/platform-test/js/src/main/resources/index-dev.html
+++ b/platform-test/js/src/main/resources/index-dev.html
@@ -3,7 +3,7 @@
 <head>
     <title>Example HMDA Parser Application</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <script type="text/javascript" src="../parserjs-fastopt.js"></script>
+    <script type="text/javascript" src="../platformtestjs-fastopt.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 <body style="margin: 0px">
