Add Scalatags code to match HTML example

--- a/platform-test/js/src/main/resources/index.html
+++ b/platform-test/js/src/main/resources/index.html
@@ -12,7 +12,7 @@
 <body style="margin: 0px">
 
   <div class="container">
-     <h1>HMDA Parser Example (Javascript)</h1>
+     <h1>HMDA Parser Example (JavaScript)</h1>
      <input type="file" id="files" name="files[]">
      <h2>Transmittal Sheet</h2>
      <table if="tsTable" class="table">
