--- a/platform-test/js/src/main/resources/index.html
+++ b/platform-test/js/src/main/resources/index.html
@@ -15,7 +15,7 @@
      <h1>HMDA Parser Example (JavaScript)</h1>
      <input type="file" id="files" name="files[]">
      <h2>Transmittal Sheet</h2>
-     <table if="tsTable" class="table">
+     <table id="tsTable" class="table">
        <thead>
          <tr>
            <th>Activity Year</th>
