--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,21 @@
         <aside>
           <a href="#" title="Home" aria-label="Federal Agency Name Home"><img src="img/ffiec-logo.png" height="25px"></a>
           <ul class="usa-sidenav-list">
-            <li><a href="index.html" class="usa-current" title="Home">Home</a></li>
+            <li><a href="/api" class="usa-current" title="Home">Home</a></li>
             <li>
-              <a href="institutions/index.html">Institutions</a>
+              <a href="/api/institutions">Institutions</a>
               <ul class="usa-sidenav-sub_list">
-                <li><a href="institutions/index.html#search">Search</a></li>
-                <li><a href="institutions/index.html#modified-lar">Modified LAR</a></li>
+                <li><a href="/api/institutions/index.html#search">Search</a></li>
+                <li><a href="/api/institutions/index.html#modified-lar">Modified LAR</a></li>
               </ul>
             </li>
             <li>
-              <a href="check-digit/index.html">Check Digit</a>
+              <a href="/api/check-digit/index.html">Check Digit</a>
               <ul class="usa-sidenav-sub_list">
-                <li><a href="check-digit/index.html#generation">Generation</a></li>
-                <li><a href="check-digit/index.html#generation-batch">Batch Generation</a></li>
-                <li><a href="check-digit/index.html#validation">Validation</a></li>
-                <li><a href="check-digit/index.html#validation-batch">Batch Validation</a></li>
+                <li><a href="/api/check-digit/index.html#generation">Generation</a></li>
+                <li><a href="/api/check-digit/index.html#generation-batch">Batch Generation</a></li>
+                <li><a href="/api/check-digit/index.html#validation">Validation</a></li>
+                <li><a href="/api/check-digit/index.html#validation-batch">Batch Validation</a></li>
               </ul>
             </li>
           </ul>
