update nav and build

--- a/src/check-digit/index.html
+++ b/src/check-digit/index.html
@@ -14,16 +14,16 @@
         <aside>
           <a href="#" title="Home" aria-label="Federal Agency Name Home"><img src="../img/ffiec-logo.png" height="25px"></a>
           <ul class="usa-sidenav-list">
-            <li><a href="../index.html" title="Home">Home</a></li>
+            <li><a href="../" title="Home">Home</a></li>
             <li>
-              <a href="../institutions/index.html">Institutions</a>
+              <a href="../institutions/">Institutions</a>
               <ul class="usa-sidenav-sub_list">
-                <li><a href="../institutions/index.html#search">Search</a></li>
-                <li><a href="../institutions/index.html#modified-lar">Modified LAR</a></li>
+                <li><a href="../institutions/#search">Search</a></li>
+                <li><a href="../institutions/#modified-lar">Modified LAR</a></li>
               </ul>
             </li>
             <li>
-              <a href="index.html" class="usa-current">Check Digit</a>
+              <a href="" class="usa-current">Check Digit</a>
               <ul class="usa-sidenav-sub_list">
                 <li><a href="#generation">Generation</a></li>
                 <li><a href="#generation-batch">Batch Generation</a></li>
@@ -202,9 +202,9 @@
         <div class="usa-footer-primary-section">
           <nav class="usa-footer-nav">
             <ul class="usa-unstyled-list">
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="../index.html">Home</a></li>
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="../institutions/index.html">Institutions</a></li>
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="index.html">Check Digit</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="../">Home</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="../institutions/">Institutions</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="">Check Digit</a></li>
             </ul>
           </nav>
         </div>
