--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,21 @@
         <aside>
           <a href="#" title="Home" aria-label="Federal Agency Name Home"><img src="img/ffiec-logo.png" height="25px"></a>
           <ul class="usa-sidenav-list">
-            <li><a href="/api" class="usa-current" title="Home">Home</a></li>
+            <li><a href="" class="usa-current" title="Home">Home</a></li>
             <li>
-              <a href="/api/institutions">Institutions</a>
+              <a href="institutions">Institutions</a>
               <ul class="usa-sidenav-sub_list">
-                <li><a href="/api/institutions/index.html#search">Search</a></li>
-                <li><a href="/api/institutions/index.html#modified-lar">Modified LAR</a></li>
+                <li><a href="institutions/#search">Search</a></li>
+                <li><a href="institutions/#modified-lar">Modified LAR</a></li>
               </ul>
             </li>
             <li>
-              <a href="/api/check-digit/index.html">Check Digit</a>
+              <a href="check-digit">Check Digit</a>
               <ul class="usa-sidenav-sub_list">
-                <li><a href="/api/check-digit/index.html#generation">Generation</a></li>
-                <li><a href="/api/check-digit/index.html#generation-batch">Batch Generation</a></li>
-                <li><a href="/api/check-digit/index.html#validation">Validation</a></li>
-                <li><a href="/api/check-digit/index.html#validation-batch">Batch Validation</a></li>
+                <li><a href="check-digit/#generation">Generation</a></li>
+                <li><a href="check-digit/#generation-batch">Batch Generation</a></li>
+                <li><a href="check-digit/#validation">Validation</a></li>
+                <li><a href="check-digit/#validation-batch">Batch Validation</a></li>
               </ul>
             </li>
           </ul>
@@ -76,16 +76,16 @@
         <div class="usa-footer-primary-section">
           <nav class="usa-footer-nav">
             <ul class="usa-unstyled-list">
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="index.html">Home</a></li>
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="institutions/index.html">Institutions</a></li>
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="check-digit/index.html">Check Digit</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="">Home</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="institutions">Institutions</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="check-digit">Check Digit</a></li>
             </ul>
           </nav>
         </div>
       </footer>
     </main>
   </div>
-<script src="../js/highlight.pack.js"></script>
+<script src="js/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
