--- a/src/institutions/index.html
+++ b/src/institutions/index.html
@@ -14,21 +14,21 @@
         <aside>
           <a href="#" title="Home" aria-label="Federal Agency Name Home"><img src="../img/ffiec-logo.png" height="25px"></a>
           <ul class="usa-sidenav-list">
-            <li><a href="../index.html" title="Home">Home</a></li>
+            <li><a href="../" title="Home">Home</a></li>
             <li>
-              <a href="index.html" class="usa-current">Institutions</a>
+              <a href="" class="usa-current">Institutions</a>
               <ul class="usa-sidenav-sub_list">
                 <li><a href="#search">Search</a></li>
                 <li><a href="#modified-lar">Modified LAR</a></li>
               </ul>
             </li>
             <li>
-              <a href="../check-digit/index.html">Check Digit</a>
+              <a href="../check-digit">Check Digit</a>
               <ul class="usa-sidenav-sub_list">
-                <li><a href="../check-digit/index.html#generation">Generation</a></li>
-                <li><a href="../check-digit/index.html#generation-batch">Batch Generation</a></li>
-                <li><a href="../check-digit/index.html#validation">Validation</a></li>
-                <li><a href="../check-digit/index.html#validation-batch">Batch Validation</a></li>
+                <li><a href="../check-digit/#generation">Generation</a></li>
+                <li><a href="../check-digit/#generation-batch">Batch Generation</a></li>
+                <li><a href="../check-digit/#validation">Validation</a></li>
+                <li><a href="../check-digit/#validation-batch">Batch Validation</a></li>
               </ul>
             </li>
           </ul>
@@ -185,9 +185,9 @@ period</code></pre></p>
         <div class="usa-footer-primary-section">
           <nav class="usa-footer-nav">
             <ul class="usa-unstyled-list">
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="../index.html">Home</a></li>
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="index.html">Institutions</a></li>
-              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="../check-digit/index.html">Check Digit</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="../">Home</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="">Institutions</a></li>
+              <li class="usa-width-one-fourth usa-footer-primary-content"><a class="usa-footer-primary-link" href="../check-digit">Check Digit</a></li>
             </ul>
           </nav>
         </div>
