clean up and use prism

--- a/src/check-digit/index.html
+++ b/src/check-digit/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HMDA Platform API - Check Digit</title>
+  <link rel="stylesheet" href="../css/default.css">
   <link rel="stylesheet" href="../css/app.min.css">
 </head>
 <body style="margin: 0;">
@@ -211,7 +212,6 @@
       </footer>
     </main>
   </div>
-  <script src="../js/highlight.pack.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <script src="../js/prism.js"></script>
 </body>
 </html>
