--- a/src/institutions/index.html
+++ b/src/institutions/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HMDA Platform API - Institutions</title>
+  <link rel="stylesheet" href="../css/default.css">
   <link rel="stylesheet" href="../css/app.min.css">
 </head>
 <body style="margin: 0;">
@@ -80,8 +81,8 @@
           <pre><code class="language-json">{
   "institutions": [
     {
-      "id": "0",
-      "name": "Bank 0",
+      "id": 0,
+      "name": false,
       "domains": ["test@bank0.com"],
       "externalIds": [
         {
@@ -194,7 +195,6 @@ period</code></pre></p>
       </footer>
     </main>
   </div>
-<script src="../js/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script src="../js/prism.js"></script>
 </body>
 </html>
